@@ -5,7 +5,6 @@
 #define WIN32_LEAN_AND_MEAN
 #endif
 
-#include <windows.h>
 #include <tkWinInt.h>
 #include "ttk/ttkTheme.h"
 
